skeplib/tests/fixtures/resolver/invalid/duplicate_imported_operator_precedence/b.sk
opr xoxo(lhs: Int, rhs: Int) -> Int precedence 9 { return lhs + rhs; }
export { xoxo };
